# biowc-ms

./: .gitignore  README.md  package-lock.json  package.json
.husky/: pre-commit
biowc-ms-lib/: Cargo.toml  README.md
biowc-ms-lib/src/: lib.rs
biowc-spectrum/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  web-dev-server.config.mjs
biowc-spectrum/demo/: demo.ts  index.html  koina-spec.ts  usi-spec.ts
biowc-spectrum/src/: BiowcPepSeq.ts  BiowcSpectrum.ts  BiowcSpectrumError.ts  BiowcSpectrumPeaks.ts  index.ts  peaks.ts  spectrum.ts
biowc-spectrum/src/styles/: biowc-pep-seq.css.ts  biowc-spectrum-error.css.ts
biowc-spectrum/stories/: index.stories.ts
biowc-spectrum/test/: BiowcSpectrum.test.ts  spectrum.test.ts  spectrum.ts
biowclib-ms/: Cargo.toml  README.md
biowclib-mz/: .gitignore  Cargo.toml
biowclib-mz/src/: lib.rs
